--- a/web-application/todo-app/templates/edit.html
+++ b/web-application/todo-app/templates/edit.html
@@ -1,24 +1,43 @@
-{% extends 'layout.html' %}
-
-{% block content %}
-    <section>
-        <div class="container mt-5">
-            <h1>Edit Task</h1>
-            <form action="/edit/{{ task[0] }}" method="POST">
-                <div class="form-group">
-                    <input type="text" name="title" class="form-control" value="{{ task[1] }}" required>
-                </div>
-                <div class="form-group">
-                    <textarea name="description" class="form-control">{{ task[2] }}</textarea>
-                </div>
-                <div class="form-group">
-                    <input type="number" name="priority" class="form-control" value="{{ task[3] }}" required>
-                </div>
-                <div class="form-group">
-                    <input type="datetime-local" name ="date" class="form-control" placeholder="Date" value="{{ task[6] }}" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Update Task</button>
-            </form>
-        </div>
-    </section>
+{% extends 'layout.html' %} {% block content %}
+<section>
+  <div class="container mt-5">
+    <h1>Edit Task</h1>
+    <form action="/edit/{{ task[0] }}" method="POST">
+      <div class="form-group">
+        <input
+          type="text"
+          name="title"
+          class="form-control"
+          value="{{ task[2] }}"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <textarea name="description" class="form-control">
+{{ task[3] }}</textarea
+        >
+      </div>
+      <div class="form-group">
+        <input
+          type="number"
+          name="priority"
+          class="form-control"
+          value="{{ task[4] }}"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <input
+          type="datetime-local"
+          name="date"
+          class="form-control"
+          placeholder="Date"
+          value="{{ task[5] }}"
+          required
+        />
+      </div>
+      <button type="submit" class="btn btn-primary">Update Task</button>
+    </form>
+  </div>
+</section>
 {% endblock %}
